# minstall

./: .gitignore  Cargo.toml  README.md  build.sh
src/: main.rs
src/mtools/: downloader.rs  exec.rs  mod.rs  parse.rs  scrape.rs
