[package]
name = "minstall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.14.0"
reqwest = {version = "0.11", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.3"
